update for sc17

--- a/motivation.tex
+++ b/motivation.tex
@@ -10,21 +10,21 @@ In addition, realizing expected performance on stand-alone many-core processors 
 
 
 
-\begin{figure}[htb]
-\centering
-\begin{subfigure}[b]{0.22\textwidth}
-\includegraphics[width=\textwidth]{figures/SMs.pdf}
-\caption{A GPUs with 4 SMs}
-\label{SMs}
-\end{subfigure}
-\begin{subfigure}[b]{0.2\textwidth}
-\includegraphics[width=\textwidth]{figures/host_accelerator.pdf}
-\caption{Host with accelerators}
-\label{hybrid}
-\end{subfigure}
-\caption{A hybrid node design}
-\label{fig:sysArch}
-\end{figure}
+%\begin{figure}[htb]
+%\centering
+%\begin{subfigure}[b]{0.22\textwidth}
+%\includegraphics[width=\textwidth]{figures/SMs.pdf}
+%\caption{A GPUs with 4 SMs}
+%\label{SMs}
+%\end{subfigure}
+%\begin{subfigure}[b]{0.2\textwidth}
+%\includegraphics[width=\textwidth]{figures/host_accelerator.pdf}
+%\caption{Host with accelerators}
+%\label{hybrid}
+%\end{subfigure}
+%\caption{A hybrid node design}
+%\label{fig:sysArch}
+%\end{figure}
 
 
 In this paper, we focus on tackling challenges associated with the hybrid host-accelerator node design, though our solution can also support the homogeneous case.
