--- a/bare_conf.tex
+++ b/bare_conf.tex
@@ -456,7 +456,7 @@
 Tan Nguyen,
 John Bachan,
 Bryce Lelbach,
-Sam Williams,
+Samuel Williams,
 John Shalf, 
 David Donofrio, and Cy Chan\\
 Lawrence Berkeley National Laboratory, USA\\
@@ -518,9 +518,11 @@ Accelerator, Graphics Processing Units, Fine-grained Scheduling, Communication H
 \input{conclusion}
 
 \section*{Acknowledgment}
-All authors from LBNL were supported by the Office of Advanced Scientific Computing Research in the Department of Energy Office of Science under contract number DE-AC02-05CH11231.
-RambutanAcc and application codes were developed on TiDA, a workstation housed at LBNL.
-All GPUs on TiDA were provided by NVIDIA.
+This material is based upon work supported by the Advanced Scientific Computing Research Program in the U.S. Department of Energy, Office of Science, under  Award Number DE-AC02-05CH11231.
+%This research used resources of the National Energy Research Scientific Computing Center (NERSC), which is supported by the Office of Science of the U.S. Department of Energy under Contract No. DE-AC02-05CH11231.
+%All authors from LBNL were supported by the Office of Advanced Scientific Computing Research in the Department of Energy Office of Science under contract number DE-AC02-05CH11231.
+RambutanAcc and application codes were developed on TiDA, a workstation housed at LBNL, with GPUs provided by NVIDIA.
+%All GPUs on TiDA were provided by NVIDIA.
 Experiments were conducted on Comet at SDSC.
 We would like to thank Paul Hargrove for his great help on GASNet.
 We also thank Yifeng Cui for time allocations on the Comet system.
