--- a/bare_conf.tex
+++ b/bare_conf.tex
@@ -458,7 +458,7 @@ John Bachan,
 Bryce Lelbach,
 Samuel Williams,
 John Shalf, 
-David Donofrio, and Cy Chan\\
+David Donofrio, Cy Chan\\
 Lawrence Berkeley National Laboratory, USA\\
 {\small \{tannguyen, jdbachan, balelbach, swwilliams, jshalf, ddonofrio, cychan\}@lbl.gov}}
 
@@ -469,16 +469,16 @@ Lawrence Berkeley National Laboratory, USA\\
 
 
 \begin{abstract}
-Recently heterogeneous node architectures have gained traction in HPC.
+Recently, heterogeneous node architectures have gained traction in HPC.
 Systems equipped with accelerators each having thousands of cores are increasingly commonplace.
-However, such architectural design results in many challenging problems.
+However, such architectural designs result in many challenging problems.
 For example, scaling a kernel to all the cores of an accelerator is not usually a trivial task.
 In addition, masking communication overheads between the host and accelerator as well as among accelerators under useful computations requires an excessive amount of programming effort, and this optimization also complicates the application code.
 In this paper, we present a task-based programming model that abstracts away many hardware details associated with sophisticated architectures such as GPUs.
 We also develop a runtime system that can schedule fine-grained tasks on portions of an accelerator, increasing performance and scalability.
 The runtime also hides communication costs automatically.
-Experimental evaluations on 3 benchmarks representing different application motifs show significant performance gains at very modest programming cost.
-These promising results can lead to special interests in the HPC community in tuning libraries such as cuSPARSE for co-running routines on a GPUs.
+Experimental evaluations on three benchmarks representing different application motifs show significant performance gains at very modest programming cost.
+These promising results can lead to special interests in the HPC community in tuning libraries such as cuSPARSE for co-running routines on GPUs.
 
 \end{abstract}
 
@@ -517,16 +517,14 @@ Accelerator, Graphics Processing Units, Fine-grained Scheduling, Communication H
 \label{sec:conclusion}
 \input{conclusion}
 
-\section*{Acknowledgment}
-This material is based upon work supported by the Advanced Scientific Computing Research Program in the U.S. Department of Energy, Office of Science, under  Award Number DE-AC02-05CH11231.
-%This research used resources of the National Energy Research Scientific Computing Center (NERSC), which is supported by the Office of Science of the U.S. Department of Energy under Contract No. DE-AC02-05CH11231.
-%All authors from LBNL were supported by the Office of Advanced Scientific Computing Research in the Department of Energy Office of Science under contract number DE-AC02-05CH11231.
-RambutanAcc and application codes were developed on TiDA, a workstation housed at LBNL, with GPUs provided by NVIDIA.
-%All GPUs on TiDA were provided by NVIDIA.
-Experiments were conducted on Comet at SDSC.
-We would like to thank Paul Hargrove for his great help on GASNet.
-We also thank Yifeng Cui for time allocations on the Comet system.
-Tan Nguyen was a fellow of the Vietnam Education Foundation while conducting this research.
+\section*{Acknowledgments}
+% DOUBLE BLIND
+%This material is based upon work supported by the Advanced Scientific Computing Research Program in the U.S. Department of Energy, Office of Science, under  Award Number DE-AC02-05CH11231.
+%RambutanAcc and application codes were developed on TiDA, a workstation housed at LBNL, with GPUs provided by NVIDIA.
+%Experiments were conducted on Comet at SDSC.
+%We would like to thank Paul Hargrove for his great help on GASNet.
+%We also thank Yifeng Cui for time allocations on the Comet system.
+%Tan Nguyen was a fellow of the Vietnam Education Foundation while conducting this research.
 
 
 {\small
