--- a/motivation.tex
+++ b/motivation.tex
@@ -3,7 +3,8 @@ An inevitable consequence of this design trend is that node architecture will be
 Indeed, it is common to see traditional multi-core CPUs augmented with multiple high-end graphics cards such as NVIDIA's GPUs or Intel's first generation Xeon Phi coprocessors (KNC).
 Hybrid programming is challenging~\cite{exascaleRoadMap}, mainly because realizing high performance and scalability on accelerators is difficult.
 Even when the application performs well on accelerator, load imbalance arises since CPU and accelerators run at different rates.
-Beside the problems above, the programmer has to handle the communication between CPU and accelerators via the PCIe connection (see Fig.~\ref{fig:sysArch}).
+Beside the problems above, the programmer has to handle the communication between CPU and accelerators via the PCIe connection.
+% (see Fig.~\ref{fig:sysArch}).
 To avoid these problems, compute nodes can be based on stand-alone many-core processors such as the Intel's second generation Xeon Phi processor (KNL).
 However, applications consisting of both control and data parallelisms may not suit well to such homogeneous design.
 In addition, realizing expected performance on stand-alone many-core processors also requires expert programming skills.
