--- a/ref.bib
+++ b/ref.bib
@@ -193,13 +193,13 @@ month={Nov},}
 
 
 @article{batchedCholesky,
-title = "Performance Tuning and Optimization Techniques of Fixed and Variable Size Batched Cholesky Factorization on \{GPUs\} ",
+title = "Performance Tuning and Optimization Techniques of Fixed and Variable Size Batched Cholesky Factorization on {GPUs}",
 journal = "Procedia Computer Science ",
 volume = "80",
 number = "",
 pages = "119 - 130",
 year = "2016",
-note = "International Conference on Computational Science 2016, \{ICCS\} 2016, 6-8 June 2016, San Diego, California, \{USA\} ",
+note = "International Conference on Computational Science 2016, {ICCS} 2016, 6-8 June 2016, San Diego, California, {USA}",
 issn = "1877-0509",
 doi = "http://dx.doi.org/10.1016/j.procs.2016.05.303",
 url = "http://www.sciencedirect.com/science/article/pii/S1877050916306548",
@@ -250,18 +250,9 @@ keywords = "GPUs "
     year = {1995}
 }
 
-@Inbook{tida-ISC16,,
-author="Unat, Didem
-and Nguyen, Tan
-and Zhang, Weiqun
-and Farooqi, Muhammed Nufail
-and Bastem, Burak
-and Michelogiannakis, George
-and Almgren, Ann
-and Shalf, John",
-editor="Kunkel, M. Julian
-and Balaji, Pavan
-and Dongarra, Jack",
+@Inbook{tida-ISC16,
+author="Unat, Didem and Nguyen, Tan and Zhang, Weiqun and Farooqi, Muhammed Nufail and Bastem, Burak and Michelogiannakis, George and Almgren, Ann and Shalf, John",
+editor="Kunkel, M. Julian and Balaji, Pavan and Dongarra, Jack",
 title="TiDA: High-Level Programming Abstractions for Data Locality Management",
 bookTitle="High Performance Computing: 31st International Conference, ISC High Performance 2016, Frankfurt, Germany, June 19-23, 2016, Proceedings",
 year="2016",
