--- a/motivation.tex
+++ b/motivation.tex
@@ -2,12 +2,13 @@ Looking at system designs towards Exascale~\cite{top500}, one will not hesitate 
 An inevitable consequence of this design trend is that node architecture will be more complex.
 Indeed, it is common to see traditional multi-core CPUs augmented with multiple high-end graphics cards such as NVIDIA's GPUs or Intel's first generation Xeon Phi coprocessors (KNC).
 Hybrid programming is challenging~\cite{exascaleRoadMap}, mainly because realizing high performance and scalability on accelerators is difficult.
-Even when the application performs well on accelerator, load imbalance arises since CPU and accelerators run at different rates.
-Beside the problems above, the programmer has to handle the communication between CPU and accelerators via the PCIe connection.
+Even when an application performs well on accelerators, load imbalance arises since CPUs and accelerators run at different rates.
+Beside the problems above, the programmer has to handle the communication between CPUs and accelerators, e.g. via PCIe, NVLink, etc.
 % (see Fig.~\ref{fig:sysArch}).
 To avoid these problems, compute nodes can be based on stand-alone many-core processors such as the Intel's second generation Xeon Phi processor (KNL).
-However, applications consisting of both control and data parallelisms may not suit well to such homogeneous design.
-In addition, realizing expected performance on stand-alone many-core processors also requires expert programming skills.
+However, applications consisting of both task and data parallelism may not suit well to such homogeneous design.
+In addition, realizing expected performance on stand-alone many-core processors also requires expert programming skills
+to manually manage data movement and locality.
 
 
 
